--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@blueprintjs/core": "^4.17.8",
+    "cannon": "^0.6.2",
     "lil-gui": "^0.18.1",
     "mobx": "^6.8.0",
     "mobx-react-lite": "^3.4.3",
@@ -18,6 +19,7 @@
     "three": "^0.150.1"
   },
   "devDependencies": {
+    "@types/cannon": "^0.1.8",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/three": "^0.149.0",
